# system-f

./: README.md  cabal.project  flake.nix  hie.yaml  systemf.cabal
.github/workflows/: CI.yaml
src/: Eval.hs  Expr.hs  Parse.hs  TypeCheck.hs
test/: Spec.hs
