cabal-version:   2.4
name:            systemf
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Jonas Carpay
maintainer:      Jonas Carpay <jonascarpay@gmail.com>
copyright:       2021 Jonas Carpay
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/systemf#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/systemf.git

common common-options
  build-depends:      base >=4.9 && <5
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Expr
    Parse
    TypeCheck

  -- Eval
  build-depends:
    , containers
    , megaparsec
    , microlens-platform
    , mtl
    , parser-combinators
    , rebound
    , text
    , union-find

test-suite systemf-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , megaparsec
    , microlens-platform
    , QuickCheck
    , rebound
    , systemf
    , text

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
